fix(client): allow pull down to refresh on mobile

--- a/projects/client/src/pages/globals.css
+++ b/projects/client/src/pages/globals.css
@@ -15,23 +15,3 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
-
-html {
-  overflow: hidden;
-  height: 100%;
-}
-
-body {
-  height: 100%;
-  overflow: auto;
-}
